--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
     <div class="row">
         {{#each char}}
         <div class="col-sm-4 justify-content-center">
-        <div class="card"><img class="card-img-top avatar" alt="Card image cap" ident={{char.ident}}>
+        <div class="card"><img src="img/default.png" class="card-img-top avatar" alt="Card image cap" ident={{char.ident}}>
             <div class="card-body">
                 <h4 class="card-title">{{char.name}}</h4><small class="text-muted">{{char.class}}</small>
                 <p class="card-text">{{char.description}}</p>
